<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.splashScreen.SplashScreen"
    android:background="@drawable/background_abstract"
    app:navGraph="@navigation/nav_graph">


    <FrameLayout
        android:id="@+id/whiteBackgroundContainer"
        android:layout_width="306dp"
        android:layout_height="375dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/viewcontainer">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginTop="65sp"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="32sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/bbg_evaluate_the_supervisor" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginTop="150sp"
            android:maxLines="7"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:textSize="16sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/beschreibung" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNavigate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="140sp"
            android:text="@string/anmelden"
            android:background="@drawable/buttons_shape" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="-79dp"
        android:layout_marginTop="-440dp"
        android:layout_marginEnd="-79dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center"
        android:src="@drawable/bitbase_group_logo"
        />



</LinearLayout>

