<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context="com.bbg.supervisorevaluation.fragment.login.LoginFragment"
    android:background="@drawable/background_abstract">


    <FrameLayout
        android:id="@+id/whiteBackgroundContainer"
        android:layout_width="310dp"
        android:layout_height="390dp"
        android:background="@drawable/viewcontainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="16sp"
            android:fontFamily="sans-serif-black"
            android:maxLines="1"
            android:text="@string/willkommen"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="70sp"
            android:layout_marginEnd="24sp"
            android:fontFamily="sans-serif-black"
            android:maxLines="7"
            android:text="@string/melden"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="normal" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mandantenIdTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMandantenId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mandanten_id"
                    android:textColor="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/qrCodeScannen"
                android:layout_width="42dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"

                android:src="@drawable/baseline_qr_code_scanner_24" />

        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLoginNavigate"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16sp"
            android:layout_marginTop="70sp"
            android:layout_marginEnd="16sp"
            android:background="@drawable/buttons_shape"
            android:text="@string/anmelden" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>