<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_abstract"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_abstract"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@color/black"
        app:contentInsetStart="16dp"
        app:contentInsetLeft="16dp"
        app:contentInsetRight="16dp"
        app:contentInsetEnd="16dp"
        app:navigationIcon="@drawable/ic_menu_black"
        android:paddingTop="33dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"/>




    <!-- Main content -->
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar" >


        <TextView
            android:id="@+id/tv_supervisorname"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/label2"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_person_24"
            android:layout_marginStart="140dp"
            android:background="@drawable/circular_background"
            android:layout_marginTop="140dp"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/tv_supervisordepartment"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="250dp"
            android:maxLines="2"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/whiteBackgroundContainer"
        android:layout_width="306dp"
        android:layout_height="375dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/white_container">

        <TextView
            android:id="@+id/tv_grey"
            android:layout_width="320dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="-220dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tv_avg"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginTop="-220dp"
            android:layout_marginEnd="30dp"
            android:maxLines="2"
            android:text="@string/bewerten_sie_ihre_vorgesetzer_bis_sp_tenstens"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_avg1"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginTop="-220dp"
            android:layout_marginEnd="30dp"
            android:maxLines="2"
            android:text="@string/begin_evaluation"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="16sp" />

<!--        <TextView-->
<!--            android:id="@+id/tv_enddatum"-->
<!--            android:layout_width="283dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="-200dp"-->
<!--            android:text="@string/datum"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16sp" />-->


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="127dp"
            android:layout_gravity="top"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="322dp"
                android:layout_height="94dp">
                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="269dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="17dp"
                    android:layout_toStartOf="@+id/rightArrowImageView"
                    android:maxLines="2"
                    android:padding="2dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="258dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/titleTextView"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="17dp"
                    android:layout_toStartOf="@+id/rightArrowImageView"
                    android:maxLines="2"
                    android:padding="2dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/rightArrowImageView"
                    android:layout_width="38dp"
                    android:layout_height="46dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="2dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        </ScrollView>



    </FrameLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="-79dp"
        android:layout_marginTop="-440dp"
        android:layout_marginEnd="-79dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center"
        android:src="@drawable/bitbase_group_logo"
        />

    <!-- Sidebar navigation -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@color/white"
        app:menu="@menu/sidebar_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

